# pyck

./: CMakeLists.txt
.github/workflows/: build.yml
